<resources>
    <string name="app_name">Jessup Bank</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_to_jessup_bank_atm">Welcome to Jessup Bank ATM!</string>
    <string name="please_enter_your_account_number_to_continue">Please enter your account number to continue</string>
    <string name="_001233445667">001233445667</string>
    <string name="action_next">Next</string>
    <string name="personal_account">Personal account</string>
    <string name="business_account">Business Account</string>
    <string name="enter_your_account_number">Enter your account number</string>
    <string name="company_code">Company code</string>
    <string name="employee_id">Employee ID</string>
    <string name="enter_your_pin">Enter your PIN</string>
    <string name="jessup_bank_atm">JESSUP BANK ATM</string>
    <string name="account_balance">Account Balance</string>
    <string name="ksh_00_00">KSH 00.00</string>
    <string name="account_actions">Account Actions</string>
    <string name="withdraw">Withdraw</string>
    <string name="deposit">Deposit</string>
    <string name="balance_enquiry">Balance Enquiry</string>
    <string name="exit">Exit</string>
    <string name="quit">Quit</string>
    <string name="hi_john">Hi, John</string>
    <string name="_12_000">$12,000</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="action_continue">Continue</string>
    <string name="tv_balance">******</string>
    <string name="action_deposit">Deposit</string>
    <string name="action_withdraw">Withdraw</string>
</resources>