<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:fillViewport="true"
    android:layout_height="match_parent"
    tools:context=".ui.WelcomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <TextView
            android:id="@+id/welcome_text_view"
            style="@style/CustomTitleText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/welcome_to_jessup_bank_atm"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_description"
            style="@style/CustomDescriptionText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/please_enter_your_account_number_to_continue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/welcome_text_view" />

        <!-- Text view -->
        <TextView
            android:id="@+id/tv_account_number"
            style="@style/CustomDescriptionText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/enter_your_account_number"
            app:layout_constraintTop_toBottomOf="@id/tv_description" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_account_number"
            style="@style/CustomTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/tv_account_number">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_account_number"
                style="@style/CustomEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/_001233445667"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Text view -->
        <TextView
            android:id="@+id/tv_company_code"
            style="@style/CustomDescriptionText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/company_code"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/til_account_number" />

        <!-- Text input layout for company code -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_company_code"
            style="@style/CustomTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/tv_company_code">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_company_code"
                style="@style/CustomEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/_001233445667"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Text view -->
        <TextView
            android:id="@+id/tv_employee_id"
            style="@style/CustomDescriptionText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/employee_id"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/til_company_code" />

        <!-- Text input layout for employee id -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_employee_id"
            style="@style/CustomTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/tv_employee_id">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_employee_id"
                style="@style/CustomEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/_001233445667"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Text view -->
        <TextView
            android:id="@+id/tv_pin"
            style="@style/CustomDescriptionText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/enter_your_pin"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/til_employee_id" />

        <!-- Text input layout for pin -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_pin"
            style="@style/CustomTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/tv_pin">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_pin"
                style="@style/CustomEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/_001233445667"
                android:inputType="numberPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_continue"
            style="@style/CustomPrimaryButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_next"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_pin"
            app:layout_constraintVertical_bias="1" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.core.widget.NestedScrollView>